--- a/.github/workflows/site.yaml
+++ b/.github/workflows/site.yaml
@@ -17,6 +17,8 @@ jobs:
         uses: Tiryoh/actions-mkdocs@v0.24.0
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v4
+        with:
+          path: site
 
   # Deployment job
   deploy:
