--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,7 +17,7 @@ nav:
   - Networking: networking.md
   - Operating System: operatingsystem.md
   - Principles: principles.md
-  - Programming: programmng.md
+  - Programming: programming.md
   - Security: security.md
   - Streaming: streaming.md
   - Web: web.md
